# toylisp

./: LICENSE  README.md  toylisp.cabal
src/: Core.hs  Eval.hs  Reader.hs
test/: CoreSpec.hs
