name:                toylisp
version:             0.1.0.0
synopsis:            A toy lisp interpreter
description:         Please see README.md
homepage:            http://github.com/moonranger/toylisp
license:             BSD3
license-file:        LICENSE
author:              Jerry Peng
maintainer:          pr2jerry@gmail.com
copyright:           2016 Jerry Peng
category:            Intepreter
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Core
                     , Eval
                     , Reader
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6
                     , parsec >= 3.1.9
  default-language:    Haskell2010

executable toylisp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , toylisp
  default-language:    Haskell2010

test-suite toylisp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , toylisp
                     , hspec >= 2.2.2
                     , QuickCheck >= 2.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/moonranger/toylisp
